# airdate

./: .gitignore  README.md
infrastructure/environments/: README.md
infrastructure/environments/gcp/: README.md
infrastructure/environments/gcp/foundation/: backend.tf  billing.tf  bootstrap.sh  organisation_iam.tf  project.tf  provider.tf  service_accounts.tf  workload_identity.tf
infrastructure/environments/gcp/frontdoor/: artifact_registry.tf  backend.tf  project.tf  provider.tf  workload_identity.tf
infrastructure/environments/gcp/organisation_structure/: backend.tf  folders.tf  organisation_iam.tf  projects.tf  provider.tf
infrastructure/environments/gcp/organisation_structure/modules/airdate-project/: enabled_apis.tf  project.tf  variables.tf
infrastructure/environments/terraform_cloud/: README.md  backend.tf  organisation.tf  provider.tf  variable_sets.tf  variables.tf  workspaces.tf
infrastructure/environments/terraform_cloud/modules/airdate-workspace/: variables.tf  workspace.tf
services/: Cargo.toml
services/airdate-types/: Cargo.toml
services/airdate-types/src/: lib.rs
services/clients/: Cargo.toml
services/clients/src/: firestore.rs
services/frontdoor/: Cargo.toml  Dockerfile
services/frontdoor/src/: errors.rs  main.rs
