[package]
name = "frontdoor"
version = "0.1.0"
edition = "2024"

[dependencies]
airdate-types = {path = "../airdate-types" }
axum = "0.8.6"
axum-macros = "0.5.0"
chrono = { version = "0.4.42", features = ["serde"] }
clients = {path = "../clients" }
tokio = { version = "1.8.0", features = ["rt-multi-thread"] }
thiserror.workspace = true
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
serde.workspace = true